objects/Cirrus__kav.object
<CustomObject><fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Details__c</fullName>
        <description>Content to be displayed to the community members.</description>
        <inlineHelpText>Content to be displayed to the community members.</inlineHelpText>
        <label>Details</label>
        <length>60000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>Feed_Notification</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Articles related to specific "Cirrus" products.  Undeploy this article type to exclude these articles from search.</description><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><label>Cirrus</label><pluralLabel>Cirrus</pluralLabel></CustomObject>